Tweak CSS to stop some text from overflowing in narrow windows

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,7 +96,6 @@ body {
 #selectedPlaceholder {
     display: inline-block;
     line-height: 15em;
-    font-size: 125%;
 }
 
 .selectedTitle {
